FIX: Solucionado el return de construir mapa unidades